@@ -1359,8 +1359,7 @@ static Image *ReadBMPImage(const ImageInfo *image_info,ExceptionInfo *exception)
           }
 	DestroyBlobInfo(flipped_image->blob);
 	flipped_image->blob=ReferenceBlob(image->blob);
-        DestroyImage(image);
-        image=flipped_image;
+        ReplaceImageInList(&image,flipped_image);
       }
     /*
       Proceed to next image.
