@@ -41,7 +41,8 @@
 <li>coders/bmp.c (ReadBMPImage): BMP reader was wrongly rejecting
 RLE-compressed files as being too small.  Fixes SourceForge bug
 #295 &quot;1.3.21 identify regression&quot;.  Also fixed 'ping' support code
-which was still reading the pixels in 'ping' mode.</li>
+which was still reading the pixels in 'ping' mode.
+(ReadBMPImage): Fix memory leak when BMP is handled as a sequence.</li>
 </ul>
 </blockquote>
 <p>2015-03-01  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
