@@ -4,6 +4,7 @@
 	RLE-compressed files as being too small.  Fixes SourceForge bug
 	#295 "1.3.21 identify regression".  Also fixed 'ping' support code
 	which was still reading the pixels in 'ping' mode.
+	(ReadBMPImage): Fix memory leak when BMP is handled as a sequence.
 
 2015-03-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
